# nlp_context_analysis_news

./: .gitignore  config_guardian.py  config_ny.py  main.py  pyproject.toml  web_scraping_guardian.py  web_scraping_pt1.py
guardian_trump_covid/: 2020-01.csv  2020-02.csv  2020-03.csv  2020-04.csv  2020-05.csv  2020-06.csv  2020-07.csv  2020-08.csv  2020-09.csv  2020-10.csv  2020-11.csv  2020-12.csv  2021-01.csv  2021-02.csv  2021-03.csv  2021-04.csv  2021-05.csv  2021-06.csv  2021-07.csv  2021-08.csv  2021-09.csv  2021-10.csv  2021-11.csv  2021-12.csv  2022-01.csv  2022-02.csv  2022-03.csv  2022-04.csv  2022-05.csv  2022-06.csv  2022-07.csv  2022-08.csv  2022-09.csv  2022-10.csv  2022-11.csv  2022-12.csv  2023-01.csv  2023-02.csv  2023-03.csv  2023-04.csv  (+8 more)
nytimes_trump_covid/: 2020-01.csv  2020-02.csv  2020-03.csv  2020-04.csv  2020-05.csv  2020-06.csv  2020-07.csv  2020-08.csv  2020-09.csv  2020-10.csv  2020-11.csv  2020-12.csv  2021-01.csv  2021-02.csv  2021-03.csv  2021-04.csv  2021-05.csv  2021-06.csv  2021-07.csv  2021-08.csv  2021-09.csv  2021-10.csv  2021-11.csv  2021-12.csv  2022-01.csv  2022-02.csv  2022-03.csv  2022-04.csv  2022-05.csv  2022-06.csv  2022-07.csv  2022-08.csv  2022-09.csv  2022-10.csv  2022-11.csv  2022-12.csv  2023-01.csv  2023-02.csv  2023-03.csv  2023-04.csv  (+8 more)
tests/: test_nytimes_api.py
