[project]
name = "ny-times-scraper"
version = "0.1.0"
description = "A web scraper for extracting articles from The New York Times."
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "pandas>=2.0.0",
    "requests>=2.31.0",
    "python-dateutil>=2.8.2",
    "urllib3>=2.0.0",
]

[project.optional-dependencies]
dev = [
    "jupyter>=1.0.0",
    "notebook>=7.0.0",
]
analysis = [
    "numpy>=1.24.0",
    "matplotlib>=3.7.0",
    "seaborn>=0.12.0",
    "scikit-learn>=1.3.0",
    "nltk>=3.8.0",
]

